--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Frevil.GitHub.io by frevil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://frevil.github.io/2233.css" type="text/css"/>
     <style type="text/css">
   	*{
   		margin: 0;
