--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Frevil.GitHub.io by frevil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://frevil.github.io/2233.css" type="text/css"/>
+    <link href="/2233.css" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <style type="text/css">
   	*{
   		margin: 0;
