--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Frevil.GitHub.io by frevil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/2233.css" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link href="/2233.css" type="text/css"/ rel="stylesheet">
     <style type="text/css">
   	*{
   		margin: 0;
