--- a/index.html
+++ b/index.html
@@ -1,111 +1,34 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Frevil.GitHub.io by frevil</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/2233.css" type="text/css"/ rel="stylesheet">
-    <style type="text/css">
-  	*{
-  		margin: 0;
-  	}
-  	.header{
-  		margin: 0;
-  		width: 100%;
-  		height: 150px;
-  		text-align: center;
-  		background-color: #ccddff;
-  		background-image: url("2233.png");
-  	}
-  	.nav{
-  		margin: 0 auto;
-  		width: 100%;
-  		height: 38px;
-  		background-color: #66ddff;
-  		position: relative;
-  	}
-  	.nav_ul{
-  		height: 38px;
-  		background-color: #ff0000;
-  		position: relative;
-
-  	}
-  	.nav_ul li{
-  		text-align: center;
-  		float: left;
-  		margin-top: 15px;
-  		margin-left: 30px;
-  		margin-right: 30px;
-  		list-style: none;
-  		background-color: #00ddff;
-  	}
-  	.container{
-  		margin: 0 auto;
-  		height: 700px;
-  		width: 70%;
-  		background-color: blue;
-  	}
-  	.wrap{
-  		height: 700px;
-  	}
-  	.footer{
-  		height: 150px;
-  		background-color: green;
-  	}
-  	.nav_left{
-  		height: 611px;
-  		width: 202px;
-  		background-color: aqua;
-  		position: absolute;
-  		left: 0;
-  		top: 150px;
-  	}
-  </style>
-  </head>
-  <body>
-	<div class="nav_left">
-		<ul>热血
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-		</ul>
-		<ul>推理
-		<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li></ul>
-		<ul>搞笑
-		<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li></ul>
-		<ul>恋爱
-		<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li><a href="Other_web/cnanimation/ChineseAnimation.html">cnam</a></li></ul>
-	</div>
-	<header class="header">
-		
-	</header>
-	<div class="container">
-		<nav class="nav">
-			<ul class="nav_ul">
-				<li>导航1</li>
-				<li>导航2</li>
-				<li>导航3</li>
-				<li>导航4</li>
-				<li>导航5</li>
-			</ul>
-		</nav>
-		<div class="wrap">
-			内容
-		</div>
-	</div>
-    <footer class="footer">
-    	脚部
-    </footer>
-    
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="css/myblog.css">
+<title>Myblog</title>
+<script src="js/myblog.js"></script>
+</head>
+<body onload="init_content_wrap()">
+<div id="header">
+  <div id="container"></div>
+</div>
+<div id="wraper" style="width: 100%; height: 500px;">
+  <div id="nav_left_wraper">
+    <div id="nav_left" mousewhell=>nav_left
+      <ul id="list" style="margin-right:10px">
+        [ul表头]
+        <li class="list_out">Start!
+          <ul>
+            <li class="list_1_in">
+              <a href="#content_1_1">主页第一步</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>      
+  </div>
+  <div class="content_wrap">content
+    <div class="content" id="content_1_1"><p>&nbsp;&nbsp;&nbsp;&nbsp;今天终于把主页大致框架弄好了，，不过由于没有经验，所以看上去不太好；考虑到主页更新的问题，自己用js写了个简单的生成代码，以后网页更新会简单一点。</p></div>
+  </div>
+</div>
+<div id="footer"></div>
 </body>
 </html>
